# argentum_game_world_data

./: Cargo.toml
src/: coordinates.rs  errors.rs  lib.rs  world_data.rs
src/coordinates/: chunk.rs  chunk_coords.rs  global_coords.rs  local.rs  local_coords.rs
src/world_data/: chunk.rs  voxel.rs
src/world_data/chunk/: errors.rs
src/world_data/voxel/: errors.rs
